--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-router": "^4.4.5",
+    "@types/react-router-dom": "^4.3.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
     "react-scripts-ts": "3.1.0"
   },
   "scripts": {
@@ -15,7 +19,7 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.11",
-    "@types/node": "^11.11.4",
+    "@types/node": "^11.11.5",
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.3",
     "typescript": "^3.3.4000"
