--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@types/react-router-dom": "^4.3.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-redux": "^6.0.1",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts-ts": "3.1.0",
+    "redux": "^4.0.1",
+    "redux-observable": "^1.0.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.86.0"
   },
