--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-scripts-ts": "3.1.0",
     "redux": "^4.0.1",
     "redux-observable": "^1.0.0",
+    "rxjs": "^6.4.0",
+    "rxjs-compat": "^6.4.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.86.0"
   },
