--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@types/react-router": "^4.4.5",
     "@types/react-router-dom": "^4.3.1",
+    "query-string": "^6.4.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
@@ -16,7 +17,8 @@
     "rxjs": "^6.4.0",
     "rxjs-compat": "^6.4.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.86.0"
+    "semantic-ui-react": "^0.86.0",
+    "styled-components": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
