--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "moment": "^2.24.0",
     "query-string": "^6.4.0",
     "react": "^16.8.4",
+    "react-datepicker": "^2.2.0",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
     "react-router": "^5.0.0",
